--- a/src/component/nav/Nav.css
+++ b/src/component/nav/Nav.css
@@ -1,11 +1,21 @@
-.container{
-display: flex;
-justify-content: space-between;
-align-items: center;
-height: 8rem;
-background-color: grey;
-background: sticky;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: century gorthic;
 }
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 8rem;
+    margin-top: 0;
+    background-color: black;
+    background: sticky;
+    max-width: 100%;
+    }
 .logo{
     display: flex;
     padding-left:25px;
@@ -14,12 +24,60 @@ background: sticky;
 .logo-text{
     color:var( --light-blue)
 }
+.navMenu ul{
+    display: flex;
+    background: orange;
+    padding: 20px;
+    list-style: none;
+    margin-right: 20px;
+  }
 menu{
     display: flex;
+    text-align: justify;
+    margin-right: 30px;
+}
+.nav-bar {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 12px;
+    list-style: none;
+    text-decoration: none;
+    align-items: center;
     justify-content: space-between;
 }
-.nav_bar{
-    display: flex;
-    list-style: none;
+li{
+    margin-right: 20px;
+    font-size: 2rem;
+    color: white;
+}
+li :hover {
+    transition: 2s;
+    background-color: skyblue;
+}
+.nav-bar li a{
+    text-decoration: none;
+    padding: 12px;
+    color: white;
+}
+.contact{
+    color: white;
+    border-radius: 20px;
+    background-color: black;
     
+}
+.btn_1 {
+    border-color: white;
+    border-radius: 8px;
+    color: white;
+    background: none;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+ul {
+    align-items: space-between;
 }
